<resources>
    <string name="app_name">Sharp Bend Detection</string>
    <string name="txt_startup">Startup</string>
    <string name="txt_finish">Finish</string>
    <string name="txt_location_a">Location A</string>
    <string name="txt_location_b">Location B</string>
    <string name="txt_create_route">Create Route</string>
    <string name="txt_start">Start</string>
    <string name="txt_stop">Stop</string>
    <string name="txt_simulation">Simulation:</string>
    <string name="unknown_error_message">Unknown error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="network_error_message">Network error</string>
</resources>
