<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/etLocationA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_location_a"
                android:ems="10"
                android:hint="@string/txt_startup"
                android:imeOptions="actionSearch"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/etLocationB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_location_b"
                android:ems="10"
                android:hint="@string/txt_finish"
                android:imeOptions="actionSearch"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.94">

    </com.yandex.mapkit.mapview.MapView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_simulation" />

        <Button
            android:id="@+id/btnStartSimulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_start" />

        <Button
            android:id="@+id/btnStopSimulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_stop" />

        <Button
            android:id="@+id/btnCreateRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_create_route" />
    </LinearLayout>

</LinearLayout>
